Fix jankey mobile vocab info viewer text alignment.

--- a/app/dialogs1/vocab-viewer/content/mobile.scss
+++ b/app/dialogs1/vocab-viewer/content/mobile.scss
@@ -128,7 +128,7 @@ gelato-component[data-name='mobile-vocab-viewer-content'] {
     .definition {
       font-size: 16px;
       margin-bottom: 15px;
-      margin-left: -10px;
+      text-align: left;
       display: block;
       color: $grey3;
     }
